# Zimin_lab

CSharp/: CSharp.sln  ZiminElectronics.cs  ZiminManager.cs  ZiminProduct.cs
Lab_3_Zimin/: CMakeLists.txt  EditDialog.cpp  EditDialog.h  EditDialog.ui  Electronics.cpp  Electronics.h  Manager.cpp  Manager.h  Product.cpp  Product.h  Utils.h  dop.cpp  main.cpp  pch.h  zimin_lab.cpp  zimin_lab.h  zimin_lab.ui  zimin_widget.cpp  zimin_widget.h
Lab_3_Zimin/Saves/: 05 11.txt  EXSAMPLE_LR4.txt  Exsample2.txt  NEW.txt
MyForm/: EditDialog.Designer.cs  EditDialog.cs  Program.cs
MyForm/Properties/: Resources.Designer.cs
My_Dll/: Electronics.h  Manager.h  My_Dll.vcxproj  My_Dll.vcxproj.filters  Product.h  dllmain.cpp  pch.h
Zimin_Lab5/: Program.cs  Utils.cs  ZiminElectronics.cs  ZiminManager.cs  Zimin_Lab5.sln  Zimin_Product.cs
Zimin_Lab6/: Zimin_Lab6.sln
Zimin_Lab6/Zimin_Lab6/: EditDialog.Designer.cs  EditDialog.cs  EditProductDialog.Designer.cs  EditProductDialog.cs  Form1.Designer.cs  Form1.cs  Program.cs  ZiminElectronics.cs  ZiminManager.cs  Zimin_Lab6.csproj  Zimin_Product.cs
Zimin_Lab6/Zimin_Lab6/Saves/: 24.12.txt  NEW.txt  New1.txt
Zimin_lab/: Zimin_lab.sln
Zimin_lab/Zimin_lab/: Electronics.cpp  Electronics.h  Manager.cpp  Manager.h  Product.cpp  Product.h  Utils.h  Zimin_lab.cpp  Zimin_lab.vcxproj  Zimin_lab.vcxproj.filters
Zimin_lab/Zimin_lab/Saves/: 0810.txt  2.txt  ex.txt  Пример.txt
test/: Program.cs  ZiminElectronics.cs  Zimin_Product.cs  test.csproj
